--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
   "author": "HorizenLabs",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ethers": "^6.13.4",
     "snarkjs": "^0.7.5",
     "yargs": "^17.7.2",
